feat: enhance LoadResourceProvider and LoadsToolProvider with detailed documentation and structured concurrency for load retrieval